--- a/style.css
+++ b/style.css
@@ -115,5 +115,44 @@ h1 {
 }
 
 .label-score {
-  margin-bottom: 2rem;
+  margin-bottom: 3rem;
+}
+
+@media only screen and (max-width: 696px) {
+  h1 {
+    font-size: 2rem;
+  }
+
+  .between {
+    font-size: 1rem;
+  }
+
+  .btn {
+    font-size: 1rem;
+    padding: 1rem 1.5rem;
+  }
+
+  .number {
+    font-size: 3rem;
+  }
+
+  .guess {
+    font-size: 2rem;
+    padding: 1.5rem;
+    width: 10rem;
+  }
+
+  .message {
+    font-size: 1.2rem;
+    margin-bottom: 4rem;
+  }
+
+  .label-score {
+    font-size: 1.2rem;
+    margin-bottom: 1.5rem;
+  }
+
+  .label-highscore {
+    font-size: 1.2rem;
+  }
 }
